@@ -1,5 +1,9 @@
 bzr-svn 0.5.4					UNRELEASED
 
+  BUG FIXES
+
+   * Ignore spurious commits setting tags to the same revision. (#342824)
+
 bzr-svn 0.5.3                   2009-03-10
 
   BUG FIXES
